# NDKLearn-Triangle

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zhidao/ndktest01/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/zhidao/ndktest01/: MainActivity.java
app/src/main/java/com/zhidao/ndktest01/natives/: NativeOperate.java  NativeRenderer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/zhidao/ndktest01/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
